@@ -210,6 +210,11 @@ a graphical editor for algorithms derived using FLAME.
 <li><a href="http://tpctl.sourceforge.net/configure-trackpoint.html">configure-trackpoint</a> - a graphical TrackPoint configuration tool.
 </ul>
 
+<ul>
+<li><a href="http://whm.sf.net/">Warehouse Manager</a> -
+a business application designed to allow you to manage several aspects of your
+warehouse based enterprise from your computer.
+</ul>
 
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
