@@ -87,7 +87,7 @@ Applications</a></b></font></td></tr></table></center>
 <center><hr></center>
 <font face="Arial,helvetica,geneva,sans-serif,lucida">
 <p>
-<font size=+1><b>Last Stable Version: 2.6.0</b></font><br>
+<font size=+1><b>Last Stable Version: 2.6.7</b></font><br>
 Versions newer than this may have problems, so use at your own risk!<br>
 
 <P>
@@ -111,6 +111,7 @@ set to 'Glade'.
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 <ul>
 
+<li><a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.6/">Glade 2.6.7 Tarball</a> (Dec 2 2004, 3.7 MB)<BR>
 <li><a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.6/">Glade 2.6.0 Tarball</a> (Apr 14 2004, 3.3 MB)<BR>
 <p>
 This version of Glade is for GTK+ 2.4 and GNOME 2.6.
