@@ -99,6 +99,63 @@ Applications</a></b></font></td></tr></table></center>
 <ul type="square">
 
 
+
+<li><b>Version 2.6.7 (Dec 2 2004)</b>
+<ul>
+<li>Fixed crashing bug in GnomeHRef.
+</ul>
+</li><br>
+
+
+<li><b>Version 2.6.6 (Nov 30 2004)</b>
+<ul>
+<li>Fixed the handling of the new translation properties in buttons.
+<li>Used the correct "text" property in GnomeHRef.
+<li>Used "%.12g" when outputting floats, to keep as many digits as possible.
+</ul>
+</li><br>
+
+
+<li><b>Version 2.6.5 (Oct 24 2004)</b>
+<ul>
+<li>Fixed another bug in drawing code that was causing warnings/crashes.
+</ul>
+</li><br>
+
+
+<li><b>Version 2.6.4 (Oct 20 2004)</b>
+<ul>
+<li>Fixed bug in drawing code that was causing crashes.
+</ul>
+</li><br>
+
+
+<li><b>Version 2.6.3 (Oct 19 2004)</b>
+<ul>
+<li>Fixed problem with missing '...' buttons in the property editor.
+</ul>
+</li><br>
+
+
+<li><b>Version 2.6.2 (Oct 13 2004)</b>
+<ul>
+<li>Build fix - mkinstalldirs wasn't in the tarball.
+</ul>
+</li><br>
+
+
+<li><b>Version 2.6.1 (Oct 12 2004)</b>
+<ul>
+<li>Save window positions between sessions.
+<li>Rewrote selection drawing code so it works better on win32.
+<li>Support "translatable", "context" and "comments" attributes for text
+   properties to help with translation.
+<li>Bug fixes.
+</ul>
+</li><br>
+
+
+
 <li><b>Version 2.6.0 (Apr 14 2004)</b>
 <ul>
 <li>Fixed trivial compilation problem in plain GTK+ version.
