@@ -158,6 +158,29 @@ Oct&nbsp;1&nbsp;2004
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+Dec&nbsp;2&nbsp;2004
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Glade 2.6.7 released !</B>
+<P>
+Get it at <a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.6/">
+http://ftp.gnome.org/pub/GNOME/sources/glade/2.6/</a>.
+<P>
+The main changes since 2.6.0 are:
+<UL>
+<LI>The positions of the Glade windows are now saved between sessions.
+<LI>The selection drawing code was rewritten so it works better on Windows.
+<LI>Added support for "translatable", "context" and "comments" attributes for
+    text properties to help with translation.
+</ul>
+</font></td></tr>
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 Apr&nbsp;16&nbsp;2004
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
